dark mode problem solve in global.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,12 +15,12 @@
   --font-sans: var(--font-roboto);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   background: var(--background);
